--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Chocolate+Classical+Sans&family=Rakkas&display=swap");
 /* Variáveis */
 :root {
     --primary-color: #026773;
@@ -29,29 +30,4 @@ h3 {
 
 p {
     margin-top: 20px;
-}
-
-img {
-    max-width: 90%;
-}
-
-/* Responsividade */
-@media (max-width: 768px) {
-    .conteudo {
-        width: 90%;
-    }
-
-    nav ul {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    nav ul li {
-        margin: 5px 0;
-    }
-
-    .cta-button {
-        width: 100%;
-    }
 }
