--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Chocolate+Classical+Sans&family=Rakkas&display=swap");
 /* Variáveis */
 :root {
     --primary-color: #026773;
@@ -30,4 +29,23 @@ h3 {
 
 p {
     margin-top: 20px;
+}
+
+
+/* Cabeçalho */
+header {
+    background: var(--primary-color);
+    color: white
+    text-align: center
+    padding: 20px;   
+}
+
+header h1 {
+    font-family: var(--font-titulo)
+    margin-bottom: 10px
+}
+
+nav ul {
+    list-style: none
+    padding: 10px
 }
