--- a/style.css
+++ b/style.css
@@ -49,3 +49,13 @@ nav ul {
     list-style: none
     padding: 10px
 }
+
+nav ul li{
+    display: inline;
+    margin: 0 15px
+}
+nav ul li a {
+    color: white
+    text-decoration: none
+    font-weight: bold
+}
